Fixes width of date boxes to prevent overflow

--- a/src/dzdatetimepicker.less
+++ b/src/dzdatetimepicker.less
@@ -166,7 +166,7 @@
     
         > button {
             // width: 35px;
-            flex: 0 0 35px;
+            flex: 0 0 34px;
             height: 24px;
             display: inline-block;
 
